--- a/David.html
+++ b/David.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Détection de Documents Falsifiés</title>
     <link rel="stylesheet" href="David.css">
+    <script src="https://unpkg.com/lottie-web@5.7.4/build/player/lottie.min.js"></script>
 </head>
 <body>
+    <div id="lottie-background"></div>
     <header>
         <h1>🛡️ Détecteur de Falsification de Documents</h1>
         <p>Importez un document pour vérifier son authenticité.</p>
@@ -22,5 +24,6 @@
     <footer>
         <p>&copy; 2025 Ivoire Secure Docs - Tous droits réservés</p>
     </footer>
+    <script src="David_script.js"></script>
 </body>
 </html>
